refactor(test): separate unit and integration tests for PIT mutation testing compatibility
- Add PIT mutation testing Maven profile with JUnit5 plugin

- Move Spring-based repository test to integration directory (BookRepositoryIT)

- Modify @WebMvcTest controller tests to pure Mockito unit tests

- Enhance BookServiceTest with additional update assertions

- Configure PIT to exclude integration tests and repositories